# shop-project

./: .pre-commit-config.yaml  pyproject.toml
shop/: models.py  orders.py  payment.py
tests/: test_models.py
